--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,54 @@
 h1 {
   text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 48px;
 }
 footer {
   text-align: center;
+  font-size: 24px;
+  color: rgba(0, 0, 0, 0.6);
+}
+.container {
+  max-width: 600px;
+  margin: 50px auto;
+  background: white;
+  padding: 60px;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  border-radius: 30px;
+}
+body {
+  background-color: #f9f7fe;
+  font-family: Georgia, "Times New Roman", Times, serif;
+}
+select {
+  display: block;
+  width: 80%;
+  border-radius: 10px;
+  padding: 10px;
+}
+.city {
+  margin: 20px 0;
+  border-bottom: 1px dashed grey;
+  padding: 20px 0;
+  font-size: larger;
+}
+.time {
+  display: flex;
+  justify-content: right;
+  font-size: 36px;
+  font-weight: bold;
+}
+.time.small {
+  font: 18px;
+  vertical-align: middle;
+}
+h2 {
+  margin: 0;
+}
+.date {
+  opacity: 0.7;
+  font-size: large;
+}
+.city:last-child {
+  border: none;
 }
